--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  font-family: "Comic Sans MS", cursive, sans-serif
+}
+
 .team-wrapper {
   display: flex;
   flex-direction: row;
@@ -9,36 +13,39 @@
 }
 .a:nth-child(2n) {
   background-color: rgb(223, 223, 223);
-  width: 855px;
-  
+  width: 870px;
+  font-family: "Comic Sans MS", cursive, sans-serif
 }
 .a:nth-child(2n) .input-2::placeholder{
   color:black;
-  font-size: 16px;
+  font-size: 16px;font-family: "Comic Sans MS", cursive, sans-serif
 
   
 }
 .a:nth-child(2n) .input-2{
   color:black;
   font-size: 16px;
-  background-color: rgb(223, 223, 223);
+  background-color: rgb(223, 223, 223);font-family: "Comic Sans MS", cursive, sans-serif
   
 }
 .team-stats {
   min-width: 50px;
   padding: 10px;
-  height: 50px;
+  height: 25px;
   border: 1px solid black;
   text-align: center;
-  line-height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 25px;font-family: "Comic Sans MS", cursive, sans-serif
 }
 .team-stats_name {
-  min-width: 185px;
+  min-width: 200px;
   padding: 10px;
-  height: 50px;
+  height: 25px;
   border: 1px solid black;
   text-align: center;
-  line-height: 50px;
+  line-height: 25px;font-family: "Comic Sans MS", cursive, sans-serif
 }
 .wrapper {
   max-width: 1400px;
@@ -48,37 +55,37 @@
 }
 .input {
   margin-top: 50px;
-  margin-right: 20px;
+  margin-right: 20px;font-family: "Comic Sans MS", cursive, sans-serif
 }
 .team-wrapper-fav {
   display: flex;
   flex-direction: row;
   width: auto;
-  
+  font-family: "Comic Sans MS", cursive, sans-serif
 
 }
 .team-wrapper-fav .team-stats .input-2::placeholder{
   color:red;
-  font-size: 16px;
+  font-size: 16px;font-family: "Comic Sans MS", cursive, sans-serif
 
 } 
 .team-wrapper-fav .team-stats {
   color:red;
-  font-size: 16px;
+  font-size: 16px;font-family: "Comic Sans MS", cursive, sans-serif
 
 } 
 .team-wrapper-fav .team-stats_name {
   color:red;
-  font-size: 16px;
+  font-size: 16px;font-family: "Comic Sans MS", cursive, sans-serif
 
 } 
 
 .input-2{
   border: 0;
-  width: 25px;
+  width: 40px;  text-align: center;font-family: "Comic Sans MS", cursive, sans-serif
 }
 .input-2::placeholder{
   color:black;
   font-size: 16px;
-
+  font-family: "Comic Sans MS", cursive, sans-serif
 }
